[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/screens/biodex/BiodexInputManager.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/screens/biodex/BiodexNameList.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/screens/biodex/BiodexSpriteList.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/screens/biodex/BiodexScrollManager.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/screens/biodex/Biodex.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/interface/UiHandleScroll.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/screens/biodex/pokedex_list.png" type="Texture" id=7]

[node name="Biodex" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Interface" type="CanvasLayer" parent="."]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="Interface"]
margin_right = 480.0
margin_bottom = 320.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="SpriteList" type="Control" parent="Interface"]
unique_name_in_owner = true
margin_left = 128.0
margin_top = 48.0
margin_right = 256.0
margin_bottom = 272.0
rect_clip_content = true
script = ExtResource( 3 )

[node name="NameList" type="Control" parent="Interface"]
unique_name_in_owner = true
margin_left = 270.0
margin_top = 30.0
margin_right = 470.0
margin_bottom = 290.0
rect_clip_content = true
script = ExtResource( 2 )

[node name="SideBar" type="Control" parent="Interface"]
margin_left = 452.0
margin_top = 30.0
margin_right = 472.0
margin_bottom = 290.0
rect_clip_content = true

[node name="SideBarPicture" type="TextureButton" parent="Interface/SideBar"]
unique_name_in_owner = true
margin_right = 20.0
margin_bottom = 30.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
expand = true

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ScrollManager" type="Tween" parent="."]
script = ExtResource( 4 )
